# RunwayDetection

./: .gitignore  CMakeLists.txt  README.md  errorStatistics.ipynb  hough.ipynb  kmeans.ipynb  main.cpp  theta_error_list.npy  utils.py
include/: feature_detection.h
includes/: feature_detection.h  lsd.h  runway_coords.h
notebook/: error618Dataset.ipynb  errorFAIM.ipynb  errorLARD.ipynb  errorStatistics.ipynb  error_618Dataset.ipynb  error_LARD.ipynb  faim_transform.py  faim_transform_check.ipynb  hough.ipynb  hough1.ipynb  hough2.ipynb  hough_accumulator.py  kmeans.ipynb  line_detection.ipynb  test.py  threshold.ipynb  utils.py
scripts/: play.py
src/: animation.cpp  coord_demo.cpp  demo.cpp  feature_detection.cpp  lsd.cpp  lsd0.cpp  main.cpp  visualization.cpp
